adl-frontend/src/test/resources/unit/error/semantic/primitives/Primitive.adl
//#SemanticError GroupId=MADL ErrorId=SOURCE_NOT_FOUND line=3
primitive primitives.Primitive {
	source my.c;	
}